--- a/instagram-login.html
+++ b/instagram-login.html
@@ -31,8 +31,8 @@
           <section class="app">
             <p class="app_get"> Baixe o aplicativo</p>
             <aside class="app_download">
-                <a href="#" class="app_google"><img src="imagem/googleplay-button.png"></a>
-                <a href="#" class="app_store"><img src="imagem/apple-button.png"></a>
+                <a href="https://play.google.com/store/games?hl=pt_BR&gl=US" class="app_google"><img src="imagem/googleplay-button.png"></a>
+                <a href="https://www.apple.com/br/app-store/" class="app_store"><img src="imagem/apple-button.png"></a>
             </aside>
         </section>
         </section>
