--- a/instagram-login.html
+++ b/instagram-login.html
@@ -17,7 +17,7 @@
             <aside class="continue_group">
                 <img src="imagem/instagram-logo.png" class="instagram-logo" alt="Instagram logo">      
                 <img src="imagem/avatar.jpg" class="profile-photo"alt="avatar perfil">         
-            <a href="#" class="continue_login">Continue como Monique França</a>
+            <a href="#" class="continue_login">Continue como Monique França e silva</a>
             <a href="#" class="continue_logout">Remover conta</a>
             </aside>
             <aside class="continue_group">       
